almost finished recommendation system

--- a/packages/node-server/recommendation/experiments.ipynb
+++ b/packages/node-server/recommendation/experiments.ipynb
@@ -1985,26 +1985,185 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'recommenders'",
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 4.81k/4.81k [00:02<00:00, 1.99kKB/s]\n"
+          ]
+        }
+      ],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>item_id</th>\n",
+              "      <th>rating</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>196</td>\n",
+              "      <td>242</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>186</td>\n",
+              "      <td>302</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>22</td>\n",
+              "      <td>377</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>244</td>\n",
+              "      <td>51</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>166</td>\n",
+              "      <td>346</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99995</th>\n",
+              "      <td>880</td>\n",
+              "      <td>476</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99996</th>\n",
+              "      <td>716</td>\n",
+              "      <td>204</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99997</th>\n",
+              "      <td>276</td>\n",
+              "      <td>1090</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99998</th>\n",
+              "      <td>13</td>\n",
+              "      <td>225</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99999</th>\n",
+              "      <td>12</td>\n",
+              "      <td>203</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100000 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       user_id  item_id  rating\n",
+              "0          196      242     3.0\n",
+              "1          186      302     3.0\n",
+              "2           22      377     1.0\n",
+              "3          244       51     2.0\n",
+              "4          166      346     1.0\n",
+              "...        ...      ...     ...\n",
+              "99995      880      476     3.0\n",
+              "99996      716      204     5.0\n",
+              "99997      276     1090     1.0\n",
+              "99998       13      225     2.0\n",
+              "99999       12      203     3.0\n",
+              "\n",
+              "[100000 rows x 3 columns]"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 4.81k/4.81k [00:01<00:00, 3.00kKB/s]\n"
+          ]
+        },
+        {
+          "ename": "IndexError",
+          "evalue": "too many indices for array: array is 1-dimensional, but 2 were indexed",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrecommendation_model\u001b[39;00m \u001b[39mimport\u001b[39;00m EASE\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrecommenders\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mimport\u001b[39;00m movielens\n\u001b[1;32m      4\u001b[0m data \u001b[39m=\u001b[39m cornac\u001b[39m.\u001b[39mdatasets\u001b[39m.\u001b[39mmovielens\u001b[39m.\u001b[39mload(size\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m100k\u001b[39m\u001b[39m'\u001b[39m, header\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39muser_id\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mitem_id\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrating\u001b[39m\u001b[39m'\u001b[39m])\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'recommenders'"
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      6\u001b[0m ease_model \u001b[39m=\u001b[39m EASE()\n\u001b[1;32m      8\u001b[0m ease_model\u001b[39m.\u001b[39mfit(data)\n\u001b[0;32m---> 10\u001b[0m predictions \u001b[39m=\u001b[39m ease_model\u001b[39m.\u001b[39;49mpredict_single([\u001b[39m2\u001b[39;49m], \u001b[39m10\u001b[39;49m)\n\u001b[1;32m     11\u001b[0m predictions\n",
+            "File \u001b[0;32m~/projects/cs-project/packages/node-server/recommendation/model.py:57\u001b[0m, in \u001b[0;36mEASE.predict_single\u001b[0;34m(self, u, k)\u001b[0m\n\u001b[1;32m     55\u001b[0m scores \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX[u, :]\u001b[39m.\u001b[39mmultiply(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mB)\n\u001b[1;32m     56\u001b[0m \u001b[39m# scores = self.X[u, :] @ self.B\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49margsort(\u001b[39m-\u001b[39;49mscores)[:, :k]\n",
+            "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
           ]
         }
       ],
       "source": [
-        "from recommendation_model import EASE\n",
+        "from model import EASE\n",
         "from recommenders.datasets import movielens\n",
         "\n",
-        "data = cornac.datasets.movielens.load(size='100k', header=['user_id', 'item_id', 'rating'])"
+        "data = movielens.load_pandas_df(size='100k', header=['user_id', 'item_id', 'rating'])\n",
+        "\n",
+        "ease_model = EASE()\n",
+        "\n",
+        "ease_model.fit(data)\n",
+        "\n",
+        "predictions = ease_model.predict_single(2, 10)\n",
+        "predictions"
       ]
     }
   ],
@@ -2026,7 +2185,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.8.10"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
